--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	
 </head>
-<body background="/assets/image.jpg">
+<body >
 
 
 
@@ -21,6 +21,10 @@
 <style>
 table, th, td {
   border: 1px solid black;
+}
+body{
+	  background: url(<%= asset_path 'image.jpg' %>);
+  background-size: 100%;
 }
 </style>
 </head>
