--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+ <style >
+   body{
+    background: url(<%= asset_path 'image.jpg' %>);
+background-size: 100%;
+   }
+ </style>
 </head>
-<body background="/assets/image.jpg">
+<body >
 
 
 
