--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -89,7 +89,7 @@ li a:hover {
 
 <p id="notice"><%= notice %></p>
 
-<fieldset style="border: 2px solid black; width: 1px ; text-align:center; margin-left: 240px; padding-left: 40px; padding-right: 40px; ">
+<fieldset style="border: 2px solid black; width: 1px ; text-align:center; margin-left: 175px; padding-left: 40px; padding-right: 40px; ">
   <legend><h1>List of users:</h1></legend>
 <head>
 <style>
@@ -97,6 +97,9 @@ table, th, td {
   border: 1px solid black;
 }
 tbody {color:black; font-weight:bold;}
+th, td {
+  padding: 10px;
+}
 </style>
 </head>
 
