--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -65,6 +65,29 @@ body{
   <strong>address:</strong>
   <%= @user.addrress%>
 </p>
+
+
+
+<p>
+  <strong>state:</strong>
+  <%= @user.state%>
+</p>
+<p>
+  <strong>pincode:</strong>
+  <%= @user.pincode%>
+</p>
+<p>
+  <strong>country:</strong>
+  <%= @user.country%>
+</p>
+<p>
+  <strong>gender:</strong>
+  <%= @user.gender%>
+</p>
+
+
+
+
 <p>
   <strong>mobile:</strong>
   <%= @user.mobile %>
