--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -38,12 +38,12 @@ background-size: 200%;
   
   <div class="field">
     <%= form.label :first_name %>
-    <%= form.text_field :first_name,{:pattern=>'[A-Za-z]'} %>
+    <%= form.text_field :first_name%>
   </div>
 
   <div class="field">
     <%= form.label :last_name %>
-    <%= form.text_field :last_name ,{:pattern=>'[A-Za-z]'}%>
+    <%= form.text_field :last_name%>
   </div>
 
   <div class="field">
@@ -120,17 +120,17 @@ background-size: 200%;
 
   <div class="field">
     <%= form.label :primary_skill %>
-    <%= form.text_field :primary_skill ,{:pattern=>'[A-Za-z]'}%>
+    <%= form.text_field :primary_skill %>
   </div>
 
   <div class="field">
     <%= form.label :secondary_skill_1 %>
-    <%= form.text_field :secondary_skill_1,{:pattern=>'[A-Za-z]'} %>
+    <%= form.text_field :secondary_skill_1%>
   </div>
 
   <div class="field">
     <%= form.label :secondary_skill_2 %>
-    <%= form.text_field :secondary_skill_2 ,{:pattern=>'[A-Za-z]'}%>
+    <%= form.text_field :secondary_skill_2 %>
   </div>
 
   <div class="field">
