--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,6 +33,35 @@ li a {
 li a:hover {
   background-color: black;
 }
+
+
+
+
+
+table {
+  width:50%;
+}
+table, th, td {
+  border: 1px solid black;
+  }
+th, td {
+  padding: 15px;
+  text-align: left;
+}
+table#t01 tr:nth-child(even) {
+  background-color: #eee;
+}
+table#t01 tr:nth-child(odd) {
+ background-color: #fff;
+}
+table#t01 th {
+  background-color: black;
+  color: white;
+}
+
+
+
+
 	</style>
 </head>
 
@@ -66,6 +95,7 @@ li a:hover {
 
 
 		<table border="1" id="table">
+			<table id="t01">
 		<tr>
 		<th>name</th>
 
